--- a/css/layout.css
+++ b/css/layout.css
@@ -7,6 +7,7 @@ header h1, header h2 {
 }
 .content {
     padding: 1em 5em;
+    
 }
 .content h3 {
     margin-top: 0;
@@ -28,13 +29,13 @@ header h1, header h2 {
     margin-left: 0;
 }
 #main {
-    padding: 0 12em 2em 2em;
+    padding: 0 2em 2em 12em;
     position: relative;
 }
 #sidebar {
     position: absolute;
     width: 10em;
-    right: 1em; 
+    left: 1em; 
     top: 1em;
 }
 #sidebar h3 {
