--- a/css/layout.css
+++ b/css/layout.css
@@ -67,7 +67,27 @@ padding: 0;
 }
 #sidebar {
 visibility: hidden; }
+td {
+display: block;
+position: relative;
+padding-left: 30%;
 }
+
+td:nth-of-type(1):before {content: "Name: "}
+td:nth-of-type(2):before {content: "Description: "}
+td:nth-of-type(3):before {content: "More Info: "}
+
+td:before {
+position: absolute;
+top: 1px;
+left: 2px;
+padding-right: 20px;
+}
+thead tr {
+display: none;
+}
+}
+tr:nth-of-type(odd) {background: lightgray;}
 .video-container {
 position: relative;
 padding-bottom: 56.25%;
@@ -82,4 +102,8 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
+}
+table {
+width: 100%;
+max-width: 800px;
 }
