--- a/css/colors_and_fonts.css
+++ b/css/colors_and_fonts.css
@@ -1,6 +1,6 @@
 body {
     font-family: Optima, sans-serif;
-    background-color: silver;
+    background-color: #006400;
 }
 a:link {
     color: #98FB98;
